# Thesis_Simulation

dev_ws/src/json_interfaces/: CMakeLists.txt  package.xml
dev_ws/src/json_msg_srv/: package.xml  setup.cfg  setup.py
dev_ws/src/json_msg_srv/json_msg_srv/: Json_topic_publisher.py  json_service_client.py
dev_ws/src/path_planner/: package.xml  setup.py
dev_ws/src/path_planner/path_planner/: example.py  path_planner.py  rrt.py  shape_adapter.py
dev_ws/src/pddlstream_ros2/: package.xml  setup.cfg  setup.py
dev_ws/src/pddlstream_ros2/launch/: examples.launch.py  path_planner_test.launch.py  warehouse_application.launch.py
dev_ws/src/pr2_control/: CMakeLists.txt  box_grasping.cc  motion_plan.json  pr2_model_control copy.cc  pr2_model_control.cc  pr2_model_control_copy.cc  pr2_single_grasp.world  pr2_single_grasp_stateless.world
dev_ws/src/warehouse_robot_controller/: package.xml  setup.cfg  setup.py
dev_ws/src/warehouse_robot_controller/launch/: controller_estimator.launch.py
dev_ws/src/warehouse_robot_controller/warehouse_robot_controller/: robot_controller.py  robot_estimator.py
dev_ws/src/warehouse_robot_spawner/: package.xml  setup.cfg  setup.py
dev_ws/src/warehouse_robot_spawner/launch/: gazebo_world.launch.py
dev_ws/src/warehouse_robot_spawner/warehouse_robot_spawner/: spawn_demo.py
dev_ws/src/warehouse_robot_spawner/worlds/: warehouse.world  warehouse_automation_pr2_11_boxes.world  warehouse_automation_pr2_11_boxes_stateless.world  warehouse_automation_pr2_1_box_stateless.world  warehouse_automation_pr2_7_boxes_stateless copy 2.world  (+2 more)
(+13 files in other folders)
